# create-kernel-app

./: .eslintrc.json  .gitignore  README.md  bunfig.toml  eslint.config.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: nightly-version-bump.yml  publish.yml
scripts/: update_versions.py
templates/python/advanced-sample/: README.md  main.py  pyproject.toml
templates/python/browser-use/: README.md  _gitignore  main.py  pyproject.toml  session.py
templates/python/claude-cu/: README.md  loop.py  main.py
templates/python/computer-use/: .gitignore  README.md  __init__.py  loop.py  main.py  pyproject.toml  run_local.py
templates/python/computer-use/custom_types/: __init__.py  beta.py
templates/python/computer-use/tools/: __init__.py  collection.py  computer.py  playwright.py
templates/python/computer-use/tools/types/: __init__.py  computer.py
templates/python/computer-use/tools/utils/: __init__.py  keyboard.py  validator.py
templates/python/computer-use/utils/: message_processing.py  tool_results.py
templates/python/cua/: README.md  main.py  pyproject.toml
templates/python/cua/agent/: agent.py
templates/python/cua/computers/: config.py
templates/python/cua/computers/default/: __init__.py  kernel.py  local_playwright.py
templates/python/openagi/: README.md  _gitignore  kernel_handler.py  kernel_provider.py  kernel_session.py  main.py  pyproject.toml
templates/python/persistent-browser/: README.md  main.py  pyproject.toml
templates/python/sample-app/: README.md  main.py  pyproject.toml
templates/typescript/: tsconfig.base.json
templates/typescript/advanced-sample/: README.md  index.ts  package.json
templates/typescript/anthropic-computer-use/: README.md  index.ts  package.json  tsconfig.json
templates/typescript/claude-cu/: README.md  _gitignore  eslint.config.js  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
templates/typescript/computer-use/: README.md  index.ts  loop.ts  package.json  pnpm-lock.yaml
(+62 files in other folders)
