[project]
name = "python-cu"
version = "0.1.0"
description = "Kernel reference app for Anthropic Computer Use"
requires-python = ">=3.9"
dependencies = [
    "anthropic~=0.52.1",
    "playwright~=1.52.0",
    "python-dateutil~=2.8.2",
    "pydantic~=2.11.5",
    "typing-extensions~=4.13.2",
    "kernel==0.4.0",
    "python-dotenv~=1.0.0",
    "httpx~=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto" 